--- a/package.json
+++ b/package.json
@@ -4,9 +4,17 @@
   "description": "MetaView is a detailed HLS player extension for Chrome",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "karma start"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "John Eric Arterberry",
+  "license": "ISC",
+  "devDependencies": {
+    "jasmine-core": "^5.7.1",
+    "karma": "^6.4.4",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-cli": "^2.0.0",
+    "karma-coverage": "^2.2.1",
+    "karma-jasmine": "^5.1.0"
+  }
 }
