--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
-  "name": "metaview",
-  "version": "1.0.0",
-  "description": "MetaView is a detailed HLS player extension for Chrome",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest"
-  },
-  "keywords": [],
-  "author": "John Eric Arterberry",
-  "license": "ISC",
-  "devDependencies": {
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0"
-  }
+	"name": "metaview",
+	"version": "1.0.0",
+	"description": "MetaView is a detailed HLS player extension for Chrome",
+	"main": "index.js",
+	"scripts": {
+		"test": "jest",
+		"build:scte35": "rollup -c"
+	},
+	"keywords": [],
+	"author": "John Eric Arterberry",
+	"license": "ISC",
+	"devDependencies": {
+		"@rollup/plugin-commonjs": "^28.0.3",
+		"@rollup/plugin-node-resolve": "^16.0.1",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
+		"rollup": "^2.79.2",
+		"rollup-plugin-terser": "^7.0.2"
+	},
+	"dependencies": {
+		"scte35": "^0.6.0"
+	}
 }
