--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@rollup/plugin-node-resolve": "^16.0.1",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
+		"jwt-decode": "^4.0.0",
 		"rollup": "^2.79.2",
 		"rollup-plugin-terser": "^7.0.2"
 	},
