--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
 	"author": "John Eric Arterberry",
 	"license": "ISC",
 	"devDependencies": {
+		"@playwright/test": "^1.52.0",
 		"@rollup/plugin-commonjs": "^28.0.3",
 		"@rollup/plugin-node-resolve": "^16.0.1",
+		"cypress": "^14.4.0",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
 		"jwt-decode": "^4.0.0",
@@ -20,6 +22,7 @@
 		"rollup-plugin-terser": "^7.0.2"
 	},
 	"dependencies": {
+		"chrome-remote-interface": "^0.33.3",
 		"scte35": "^0.6.0"
 	}
 }
